--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header class="header">
-        <a href="#" class="logo">Ibtesam.</a>
+        <a href="#" class="logo">Ibtesam Hasan Labib</a>
 
         <input type="checkbox" id="check">
         <label for="check" class="icons">
@@ -253,4 +253,5 @@
         });
     </script>
 </body>
+
 </html>
